fix spacing issue on footer top

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,7 +198,6 @@ h1 {
     color: #fafafa;
     background-color: rgb(41, 41, 41);
     text-align: center;
-    margin-top: 10px;
     font-size: 140%;
 }
 
